// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Components Auto Select Component 1`] = `
<StatusBar
  progressData={
    Object {
      "isDone": false,
      "itemCount": 0,
      "key": "test",
      "percentDone": 0,
      "secondaryText": "TestSuccess",
      "text": "TestSuccess",
      "totalItems": 0,
      "usePercentDone": false,
    }
  }
  wrapperClass="TestSuccess"
/>
`;

exports[`Progress Components Auto Select Component 2`] = `
<ProgressBar
  progressData={
    Object {
      "isDone": false,
      "itemCount": 0,
      "key": "test",
      "percentDone": 0,
      "secondaryText": "TestSuccess",
      "text": "TestSuccess",
      "totalItems": 0,
      "usePercentDone": true,
    }
  }
  wrapperClass="TestSuccess"
/>
`;

exports[`Progress Components Progress Bar Render 1`] = `
<ProgressBar
  progressData={
    Object {
      "isDone": false,
      "itemCount": 0,
      "key": "test",
      "percentDone": 0,
      "secondaryText": "TestSuccess",
      "text": "TestSuccess",
      "totalItems": 0,
      "usePercentDone": false,
    }
  }
  wrapperClass="TestSuccess"
>
  <div
    className="progress-component__wrapper TestSuccess"
  >
    <div
      className="progress-bar__top-text"
    >
      0% complete
    </div>
    <div
      className="progress-bar__bar"
    >
      <div
        className="progress-bar__bar__inner"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
    <div
      className="progress-bar__bottom-text"
    >
      TestSuccess
    </div>
  </div>
</ProgressBar>
`;

exports[`Progress Components Status Bar Render 1`] = `
<StatusBar
  progressData={
    Object {
      "isDone": false,
      "itemCount": 0,
      "key": "test",
      "percentDone": 0,
      "secondaryText": "TestSuccess",
      "text": "TestSuccess",
      "totalItems": 0,
      "usePercentDone": false,
    }
  }
  wrapperClass="TestSuccess"
>
  <div
    className=" TestSuccessprogress-component__wrapper"
  >
    <div
      className="status-bar__top-text"
    >
      TestSuccess
    </div>
    <div
      className="status-bar__bottom-text"
    >
      TestSuccess
    </div>
  </div>
</StatusBar>
`;

exports[`Progress Components Stop Render When Done 1`] = `<Fragment />`;
